
Mon Sep 20 19:41:17 PDT 1999
(Mandrake)

yet more kde fixes.  Hopefully most of the window operations menu in kpanel
 should work now

-------------------------------------------------------------------------------

Mon Sep 20 20:14:35 PDT 1999
(Mandrake)

removed todo item, added new TODO item

-------------------------------------------------------------------------------

Mon Sep 20 21:30:28 PDT 1999
(Mandrake)

fixed the desktop changing bug in kde support.  (oops)

-------------------------------------------------------------------------------

Tue Sep 21 10:13:48 PDT 1999
(Mandrake)

fixed some problems with kde notifications on events.  all of these things
should be accounted for now.  It looks like all of panel pretty much works
out-of-box.

-------------------------------------------------------------------------------

Tue Sep 21 16:12:59 EDT 1999
(Christian)

YASGB. Yet another stupid group bug, that is. Group borders
weren't reset after closing some dialogs.

Tweaked the user name mapping in ecvs so that it works on my
lappy :)
 

-------------------------------------------------------------------------------

Tue Sep 21 17:06:31 EST 1999
(Christian)

Updated the Eterm theme and some minor fixes.

-------------------------------------------------------------------------------

Tue Sep 21 19:37:31 PDT 1999
(Raster)

fix possible memory leak

cleaned up some code

fixed positioning on restart/start of internal wins

fixed iconified startup bugs for clients that ask to be iconified on start

fixed icon pixmap bugs

took my iguana for a walk around the block

-------------------------------------------------------------------------------

Tue Sep 21 19:51:51 PDT 1999
(Raster)

get rid of 2 warnings

-------------------------------------------------------------------------------

Tue Sep 21 23:17:24 PDT 1999
(Raster)

only allow one "default group settings" configuration dialog at a time